Spacing fixed about me

--- a/style/large.css
+++ b/style/large.css
@@ -46,7 +46,7 @@
 
 .about h2 {
   font-size: 168px;
-  margin-left: 237px;
+  margin-left: 190px;
 }
 
 .about-first h2 {
@@ -66,7 +66,7 @@
   border-radius: 50%;
   position: relative;
   top: 140px;
-  left: 532px;
+  left: 485px;
   overflow: hidden;
   z-index: 1;
 }
